--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-orange-500 text-4xl flex-shrink-0">
-                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-html5 relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">HTML5</p>
@@ -298,7 +298,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-blue-500 text-4xl flex-shrink-0">
-                    <i class="fab fa-css3-alt"></i>
+                    <i class="fab fa-css3-alt relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">CSS3</p>
@@ -309,7 +309,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-purple-500 text-4xl flex-shrink-0">
-                    <i class="fab fa-bootstrap"></i>
+                    <i class="fab fa-bootstrap relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">Bootstrap</p>
@@ -320,7 +320,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-yellow-400 text-4xl flex-shrink-0">
-                    <i class="fab fa-js-square"></i>
+                    <i class="fab fa-js-square relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">JavaScript</p>
@@ -331,7 +331,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-blue-400 text-4xl flex-shrink-0">
-                    <i class="fas fa-code"></i>
+                    <i class="fas fa-code relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">jQuery</p>
@@ -342,7 +342,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-green-400 text-4xl flex-shrink-0">
-                    <i class="fas fa-exchange-alt"></i>
+                    <i class="fas fa-exchange-alt relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">AJAX</p>
@@ -353,7 +353,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-gray-400 text-4xl flex-shrink-0">
-                    <i class="fas fa-terminal"></i>
+                    <i class="fas fa-terminal relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">C</p>
@@ -364,7 +364,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-cyan-400 text-4xl flex-shrink-0">
-                    <i class="fas fa-code-branch"></i>
+                    <i class="fas fa-code-branch relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">C++</p>
@@ -375,7 +375,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-indigo-400 text-4xl flex-shrink-0">
-                    <i class="fab fa-php"></i>
+                    <i class="fab fa-php relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">PHP</p>
@@ -386,7 +386,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-red-500 text-4xl flex-shrink-0">
-                    <i class="fab fa-laravel"></i>
+                    <i class="fab fa-laravel relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">Laravel</p>
@@ -397,10 +397,10 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-red-600 text-4xl flex-shrink-0">
-                    <i class="fas fa-database"></i>
+                    <i class="fas fa-database relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
-                    <p class="text-lg font-semibold">MS SQL Server</p>
+                    <p class="text-lg font-semibold ">MS SQL Server</p>
                 </div>
             </div>
 
@@ -408,7 +408,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-orange-500 text-4xl flex-shrink-0">
-                    <i class="fas fa-database"></i>
+                    <i class="fas fa-database relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">MySQL</p>
@@ -419,10 +419,10 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-gray-300 text-4xl flex-shrink-0">
-                    <i class="fas fa-database"></i>
+                    <i class="fas fa-database relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
-                    <p class="text-lg font-semibold">SQLite</p>
+                    <p class="text-lg font-semibold ">SQLite</p>
                 </div>
             </div>
 
@@ -430,7 +430,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-blue-500 text-4xl flex-shrink-0">
-                    <i class="fas fa-code"></i>
+                    <i class="fas fa-code relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">VS Code</p>
@@ -441,7 +441,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-orange-500 text-4xl flex-shrink-0">
-                    <i class="fas fa-paper-plane"></i>
+                    <i class="fas fa-paper-plane relative floating-animation"></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">Postman</p>
@@ -452,7 +452,7 @@
             <div data-aos="zoom-in-up" data-aos-duration="1500"
                 class="bg-gray-800 p-6 rounded-lg flex items-center transform transition duration-300 hover:scale-105 hover:shadow-xl hover:bg-gray-700 cursor-pointer">
                 <div class="text-teal-400 text-4xl flex-shrink-0">
-                    <i class="fas fa-microchip"></i>
+                    <i class="fas fa-microchip relative floating-animation "></i>
                 </div>
                 <div class="ml-6">
                     <p class="text-lg font-semibold">IoT (ESP32 / Arduino / Embedded C)</p>
